k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-frontend
  labels:
    app: student-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-frontend
  template:
    metadata:
      labels:
        app: student-frontend
    spec:
      containers:
        - name: frontend
          image: student-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "256m"
              memory: "512Mi"
            limits:
              cpu: "512m"
              memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: student-frontend
  labels:
    app: student-frontend
spec:
  type: LoadBalancer
  selector:
    app: student-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
